samples/errors/typesmismatch.our
int a;
// double b;
// char c;

main()
{
    a = 0.33;
//  a = 'a';

//  b = 1;
//  b = 'b';

//  c = 1;
//  c = 2.3;

}

/*
Types mismatch: cannot convert from double to int  Line: 7
*/